<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="horizontal"
    android:paddingBottom="@dimen/six_pack_vertical_margin"
    android:paddingLeft="@dimen/six_pack_horizontal_margin"
    android:paddingRight="@dimen/six_pack_horizontal_margin"
    android:paddingTop="@dimen/six_pack_horizontal_margin"
    tools:context=".sixpack.SixPackFragment">
    <!--android:baselineAligned="false"-->

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="@dimen/icon_margin"
            android:layout_weight="1"
            android:orientation="vertical"
            tools:ignore="NestedWeights" >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:contentDescription="@string/mercury"
                android:src="@drawable/icon_base" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/icon_margin2"
                android:gravity="center_horizontal"
                android:text="@string/mercury" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="@dimen/icon_margin"
            android:layout_weight="1"
            android:orientation="vertical"
            tools:ignore="NestedWeights" >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:contentDescription="@string/venus"
                android:src="@drawable/icon_base" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/icon_margin2"
                android:gravity="center_horizontal"
                android:text="@string/venus" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="@dimen/icon_margin"
            android:layout_weight="1"
            android:orientation="vertical"
            tools:ignore="NestedWeights" >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:contentDescription="@string/earth"
                android:src="@drawable/icon_base" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/icon_margin2"
                android:gravity="center_horizontal"
                android:text="@string/earth" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="@dimen/icon_margin"
            android:layout_weight="1"
            android:orientation="vertical"
            tools:ignore="NestedWeights" >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:contentDescription="@string/mars"
                android:src="@drawable/icon_base" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/icon_margin2"
                android:gravity="center_horizontal"
                android:text="@string/mars" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="@dimen/icon_margin"
            android:layout_weight="1"
            android:orientation="vertical"
            tools:ignore="NestedWeights" >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:contentDescription="@string/jupiter"
                android:src="@drawable/icon_base" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/icon_margin2"
                android:gravity="center_horizontal"
                android:text="@string/jupiter" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="@dimen/icon_margin"
            android:layout_weight="1"
            android:orientation="vertical"
            tools:ignore="NestedWeights" >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:contentDescription="@string/saturn"
                android:src="@drawable/icon_base" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/icon_margin2"
                android:gravity="center_horizontal"
                android:text="@string/saturn" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>